--- a/README.org
+++ b/README.org
@@ -2,6 +2,1446 @@
 #+AUTHOR: Rahul M. Juliato
 #+SETUPFILE: https://fniessen.github.io/org-html-themes/org/theme-readtheorg.setup
 
+
+* Advanced JS Design Patterns
+
+Source: [[https://medium.com/dhiwise/advanced-javascript-design-patterns-6812f3286585]]
+
+** Creational
+Are patterns that will creat objects for you instead of instantiating
+and object directly.
+
+*** Factory Method
+
+In this example we have a class of points and we can create a
+cartesian point and a polar point.
+
+#+BEGIN_SRC js
+
+   CoordinateSystem = {
+	 CARTESIAN: 0,
+	 POLAR: 1,
+   };
+
+   class Point {
+	 constructor(x, y) {
+	   this.x = x;
+	   this.y = y;
+	 }
+
+	 static get factory() {
+	   return new PointFactory();
+	 }
+   }
+
+   class PointFactory {
+	 static newCartesianPoint(x, y) {
+	   return new Point(x, y);
+	 }
+
+	 static newFromPolarPoint(rho, theta) {
+	   return new Point(rho * Math.cos(theta), rho * Math.sin(theta));
+	 }
+  }
+
+  let point = PointFactory.newFromPolarPoint(5, Math.PI/2);
+  let point2 = PointFactory.newCartesianPoint(5,6);
+  console.log(point);
+  console.log(point2);
+
+#+END_SRC
+
+#+RESULTS:
+: Point { x: 3.061616997868383e-16, y: 5 }
+: Point { x: 5, y: 6 }
+: undefined
+
+*** Abstract Method
+
+THe abstract factory pattern provides a way to encapsulate a group of
+individual factories that have a common theme without specifying their
+concrete classes.
+
+#+BEGIN_SRC js
+
+  class Drink {
+	consume() {}
+  }
+
+  class Tea extends Drink {
+	consume() {
+	  console.log("This is Tea");
+	}
+  }
+
+  class Coffee extends Drink {
+	consume() {
+	  console.log("This is Coffee");
+	}
+  }
+
+  // Making a Drink Factory
+
+  class DrinkFactory {
+	prepare(amount) {}
+  }
+
+  class TeaFactory extends DrinkFactory {
+	makeTea() {
+	  console.log("Tea Created");
+	  return new Tea();
+	}
+  }
+
+  class CoffeeFactory extends DrinkFactory {
+	makeCoffee() {
+	  console.log("Coffee Created");
+	  return new Coffee();
+	}
+  }
+
+  let teaDrinkFactory = new TeaFactory();
+  let tea = teaDrinkFactory.makeTea();
+  tea.consume();
+
+#+END_SRC
+
+#+RESULTS:
+: Tea Created
+: This is Tea
+: undefined
+
+*** Builder
+The builder pattern is a design pattern designed to provide a flexible
+solution to various object creation problems in object-oriented
+programming.
+
+#+BEGIN_SRC js
+  class Person {
+	constructor() {
+	  this.streetAddress = this.postcode = this.city = "";
+	  this.companyName = this.position = "";
+	  this.annualIncome = 0;
+	}
+	toString() {
+	  return(
+		`Person lives at ${this.streetAddress}, ${this.city}, ${this.postcode}
+		 and works at ${this.companyName} as a
+		 ${this.position} earning ${this.annualIncome}`
+	  )
+	}
+  }
+
+  // Now we need a Person Builder a Person Job Builder, and a Person Address
+
+  class PersonBuilder {
+	constructor(person = new Person()){
+	   this.person = person;
+	}
+	get lives() {
+	  return new PersonAddressBuilder(this.person);
+	}
+
+	get works() {
+	  return new PersonJobBuilder(this.person);
+	}
+	build() {
+	  return this.person;
+	}
+  }
+
+  class PersonJobBuilder extends PersonBuilder {
+	constructor(person){
+	  super(person);
+	}
+	at(companyName) {
+	  this.person.companyName = companyName;
+	  return this;
+	}
+	asA(position) {
+	  this.person.position = position;
+	  return this;
+	}
+	earning(annualIncome) {
+	  this.person.annualIncome = annualIncome;
+	  return this;
+	}
+  }
+
+  class PersonAddressBuilder extends PersonBuilder {
+	constructor(person) {
+	  super(person);
+	}
+	at(streetAddress){
+	  this.person.streetAddress = streetAddress;
+		return this;
+	}
+	withPostcode(postcode) {
+	  this.person.postcode = postcode;
+	  return this;
+	}
+	in(city) {
+	  this.person.city = city;
+	  return this;
+	}
+  }
+
+  let personBuilder = new PersonBuilder();
+  let person = personBuilder.lives
+	.at("ABC Road")
+	.in("Multan")
+	.withPostcode("123123")
+	.works.at("Some Company")
+	.asA("Engineer")
+	.earning("100000000")
+	.build();
+
+  console.log(person.toString());
+  console.log("\n person: ", JSON.stringify(person));
+#+END_SRC
+
+#+RESULTS:
+: Person lives at ABC Road, Multan, 123123
+: 	   and works at Some Company as a
+: 	   Engineer earning 100000000
+: 
+:  person:  {"city":"Multan","postcode":"123123","streetAddress":"ABC Road","position":"Engineer","companyName":"Some Company","annualIncome":"100000000"}
+: undefined
+
+*** Prototype
+The prototype pattern is a creational design pattern in software
+development.  It is used when the type of objects to creat is
+determined by a protitypical instance, which is cloned to produce new
+objects.
+
+#+BEGIN_SRC js
+	class Car {
+	  constructor(name, model) {
+		this.name = name;
+		this.model = model;
+	  }
+
+	  SetName(name) {
+		console.log(`${name}`)
+	  }
+
+	  clone() {
+		  return new Car(this.name, this.model);
+	  }
+	}
+
+	let car = new Car();
+	car.SetName("Audi");
+
+	let car2 = car.clone();
+	car2.SetName("BMW");
+
+#+END_SRC
+
+#+RESULTS:
+: Audi
+: BMW
+: undefined
+
+*** Singleton
+In software engineering, the singleton pattern is a software design
+pattern that restricts the instantiation of a classe to one "single"
+instance. This is useful when exactly one object ie needed to
+coodinate actions across the system.
+
+#+BEGIN_SRC js
+  class Singleton {
+
+	constructor () {
+	  const instance = this.constructor.instance;
+
+	  if (instance) {
+		 return instance;
+	  }
+
+	  this.constructor.instance = this;
+	}
+
+	say() {
+	  console.log("Saying...");
+	}
+  }
+
+  let s1 = new Singleton();
+  let s2 = new Singleton();
+  console.log("Are they the same? ", (s1 === s2));
+
+  s1.say();
+#+END_SRC
+
+#+RESULTS:
+: Are they the same?  true
+: Saying...
+: undefined
+
+** Structural
+This patterns concern class and object composition. They use
+inheritance to compose interfaces.
+*** Adapter
+Is a pattern that allows the interface of an existing class to be used
+as another interface. It is used to make existing classes work with
+others without modifying their source code.
+
+#+BEGIN_SRC js
+  class Calculator1 {
+	constructor() {
+	  this.operations = function(value1, value2, operation) {
+		switch (operation) {
+		  case 'add':
+			return value1 + value2;
+		  case 'sub':
+			return value1 - value2;
+		}
+	  };
+	}
+  }
+  // usage: const c1 = new Calculator1;
+  //        c1.operations(1, 2, 'add');
+
+  class Calculator2 {
+   constructor() {
+	 this.add = function(value1, value2) {
+	   return value1 + value2;
+	 };
+
+	 this.sub = function(value1, value2) {
+	   return value1 = value2;
+	 }
+   }
+  }
+  // usage: const c2 = new Calculator2;
+  //        c2.add(1, 2);
+
+  class CalcAdapter {
+	constructor () {
+	  const cal2 = new Calculator2();
+	  this.operations = function(value1, value2, operation) {
+		switch (operation) {
+		  case 'add':
+			return cal2.add(value1, value2);
+		  case 'sub':
+			return cal2.sub(value1, value2);
+		}
+	  };
+	}
+  }
+
+  const adaptedCalc = new CalcAdapter();
+  console.log(adaptedCalc.operations(1, 2, 'add'));
+#+END_SRC
+
+#+RESULTS:
+: 3
+: undefined
+
+
+
+*** Bridge
+Bridge is a structural design pattern that lets you split a large
+class of a set of closely related classes into two separate
+hierarchies - abstraction and implementation -which can be developed
+independently of each other.
+
+#+BEGIN_SRC js
+  class VectorRenderer {
+	renderCircle(radius) {
+	  console.log(`Drawing a circle of radius ${radius}`);
+	}
+  }
+
+  class RasterRenderer {
+	renderCircle(radius) {
+	  console.log(`Drawing pixels for circle of radius ${radius}`);
+	}
+  }
+
+  class Shape {
+	constructor(renderer) {
+	  this.renderer = renderer;
+	}
+  }
+
+  class Circle extends Shape {
+	constructor(renderer, radius) {
+	  super(renderer);
+	  this.radius = radius;
+	}
+	draw() {
+	  this.renderer.renderCircle(this.radius);
+	}
+	resize(factor) {
+	  this.radius *= factor;
+	}
+  }
+
+  const raster = new RasterRenderer();
+  const vector = new VectorRenderer();
+  
+  const circle = new Circle(vector, 5);
+
+  circle.draw();
+  circle.resize(2);
+  circle.draw();
+
+#+END_SRC
+
+#+RESULTS:
+: Drawing a circle of radius 5
+: Drawing a circle of radius 10
+: undefined
+
+*** Composite
+The composite pattern describes a group of objects that are treated
+the same way as a single instance of the same type of object.
+
+#+BEGIN_SRC js
+  class Employer {
+	constructor(name, role) {
+	  this.name = name;
+	  this.role = role;
+	}
+	print() {
+	  console.log(`Name: ${this.name} | Role: ${this.role}`);
+	}
+  }
+
+  class EmployerGroup{
+	constructor(name, composite=[]) {
+	  console.log(name);
+	  this.name = name;
+	  this.composites = composite;
+	}
+
+	print() {
+	  console.log(this.name);
+	  this.composites.forEach(emp => emp.print());
+	}
+  }
+
+  let bob = new Employer("bob", "developer on proj1");
+  let anne = new Employer("anne", "developer on proj1 and proj2");
+
+  let groupDevelopers = new EmployerGroup("Developers", [bob, anne]);
+#+END_SRC
+
+#+RESULTS:
+: Developers
+: undefined
+
+*** Decorator
+The decorator pattern is a design pattern that allows behavior to be
+added to an individual object, dynamically, without affecting the
+behavior of other objects from the same class.
+
+#+BEGIN_SRC js
+  class Shape {
+	constructor(color) {
+	  this.color = color;
+	}
+  }
+
+  class Circle extends Shape {
+	constructor(radius = 0) {
+	  super();
+	  this.radius = radius;
+	}
+	resize(factor) {
+	  this.radius *= factor;
+	}
+	toString() {
+	  return `A circle ${this.radius}`;
+	}
+  }
+
+  class ColoredShape extends Shape {
+	constructor(shape, color) {
+	  super();
+	  this.shape = shape;
+	  this.color = color;
+	}
+	toString() {
+	  return `${this.shape.toString()} has the color ${this.color}`;
+	}
+  }
+
+  let circle = new Circle(2);
+  console.log(circle);
+
+  let redCircle = new ColoredShape(circle, "red");
+  console.log(redCircle.toString());
+
+#+END_SRC
+
+#+RESULTS:
+: Circle { color: undefined, radius: 2 }
+: A circle 2 has the color red
+: undefined
+
+*** Facade
+The facade pattern (also spelled façade) is a software-design pattern
+commonly used in object-oriented programming. Analogous to a facade in
+architecture, a facade is an object that serves as a front-facing
+interface masking more complex underlying or structural code.
+
+#+BEGIN_SRC js
+  class CPU {
+	freeze() { console.log("Freezed....") }
+	jump(position) { console.log ("Go.....")}
+	execute() { console. log("Run....") }
+  }
+
+  class Memory {
+	load(position, data) { console.log("Load.....") }
+  }
+
+  class HardDrive {
+	read(lba, size) { console.log("Ready....") }
+  }
+
+  class ComputerFacade {
+	constructor() {
+	  this.processor = new CPU();
+	  this.ram = new Memory();
+	  this.hd = new HardDrive();
+	}
+
+	start() {
+	  this.processor.freeze();
+	  this.ram.load(this.BOOT_ADDRESS, this.hd.read(this.BOOT_SECTOR, this.SECTOR_SIZE));
+	  this.processor.jump(this.BOOT_ADDRESS);
+	  this.processor.execute();
+	}
+  }
+
+
+  let computer = new ComputerFacade();
+  computer.start();
+
+#+END_SRC
+
+#+RESULTS:
+: Freezed....
+: Ready....
+: Load.....
+: Go.....
+: Run....
+: undefined
+
+*** Flyweight
+A flyweight is an object that minimizes memory usage by sharing as
+much data as possible with other similar objects.
+
+#+BEGIN_SRC js
+
+		 class User {
+		   constructor(fullName) {
+			   this.fullName = fullName;  
+		   }
+		 }
+
+		 class User2 {
+		   constructor(fullName) {
+			   let getOrAdd = function(s) {
+			   let idx = User2.strings.indexOf(s);
+				 if (idx !== -1) return idx;
+				 else {
+				   User2.strings.push(s);
+				   return User2.strings.length - 1;
+				 }
+			   };
+			   this.names = fullName.split(' ').map(getOrAdd);
+		   }
+		 }
+
+		 User2.strings = [];
+
+		 function getRandomInt(max) {
+		   return Math.floor(Math.random() * Math.floor(max));
+		 }
+
+		 let randomString = function() {
+		   let result = [];
+		   for (let x = 0; x < 10; ++x)
+			 result.push(String.fromCharCode(65 + getRandomInt(26)));
+
+		   return result.join('');
+		 }
+
+
+		 // -----
+
+		 let users = [];
+		 let users2 = [];
+		 let firstNames = [];
+	     let lastNames = [];
+
+		 for (let i = 0; i < 100; ++i) {
+		   firstNames.push(randomString());
+		   lastNames.push(randomString());
+		 }
+
+		 // making 10k users
+		 for (let first of firstNames) {
+		   for (let last of lastNames) {
+			 users.push(new User(`${first} ${last}`));
+			 users2.push(new User2(`${first} ${last}`));
+		   }
+		 }
+
+		console.log(`10k users take up ~${JSON.stringify(users).length} chars`);
+
+		let users2length = [users2, User2.strings]
+			.map(x => JSON.stringify(x).length)
+			.reduce((x,y) => x+y);
+
+		console.log(`10k flyweight users take ~${users2length} chars`);
+#+END_SRC
+
+#+RESULTS:
+: 10k users take up ~370001 chars
+: 10k flyweight users take ~191602 chars
+: undefined
+
+*** Proxy
+By using Proxy, a class can represent the functionality of another class.
+
+The proxy pattern is a software design pattern. A proxy, in its most
+general form, is a class functioning as an interface to something
+else.
+
+#+BEGIN_SRC js
+  class Percentage {
+	constructor(percent) {
+	  this.percent = percent;
+	  }
+
+	toString() {
+	  return `${this.percent}%`;
+	}
+
+	valueOf() {
+	  return this.percent / 100;
+	}
+  }
+
+  let fivePercent = new Percentage(5);
+  console.log(fivePercent.toString());
+  console.log(`5% of 50 is ${50 * fivePercent}`);
+#+END_SRC
+
+#+RESULTS:
+: 5%
+: 5% of 50 is 2.5
+: undefined
+
+** Behavioral
+In software engineering, behavioral design patterns are design
+patterns that identify common communication patterns among objects. By
+doing so, these patterns increase flexibility in carrying out
+communication.
+
+*** Chain of Responsibility
+In object-oriented design, the chain-of-responsibility pattern is a
+design pattern consisting of a source of command objects and a series
+of processing objects.
+
+#+BEGIN_SRC js
+
+  class Creature {
+	constructor(name, attack, defense) {
+	  this.name = name;
+	  this.attack = attack;
+	  this.defense = defense;
+	}
+	toString() {
+	  return `${this.name} (${this.attack}/${this.defense})`;
+	}
+  }
+
+  class CreatureModifier {
+	constructor(creature) {
+	  this.creature = creature;
+	  this.next = null;
+	}
+
+	add(modifier) {
+	  if (this.next) this.next.add(modifier);
+	  else this.next = modifier;
+	}
+
+	handle() {
+	  if (this.next) this.next.handle();
+	}
+  }
+
+  class NoBonusesModifier extends CreatureModifier {
+	constructor(creature) {
+	  super(creature);
+	}
+	handle() {
+	  console.log("No bonuses for you!");
+	}
+  }
+
+  class DoubleAttackModifier extends CreatureModifier {
+	constructor(creature) {
+	  super(creature)
+	}
+	handle() {
+	  console.log(`Doubling ${this.creature.name}'s attack`);
+	  this.creature.attack *= 2;
+	  super.handle();
+	}
+  }
+
+  class IncreaseDefenseModifier extends CreatureModifier {
+	constructor(creature) {
+	  super(creature);
+	}
+
+	handle() {
+	  if (this.creature.attack <= 2) {
+		console.log(`Increasing ${this.creature.name}'s defense`);
+		this.creature.defense += 1;
+	  }
+
+	super.handle();
+   }
+  }
+
+
+
+  let dragon = new Creature("Dragon", 1, 1);
+  console.log(dragon.toString());
+
+  let root = new CreatureModifier(dragon);
+  root.add(new DoubleAttackModifier(dragon));
+  root.add(new IncreaseDefenseModifier(dragon));
+  root.handle();
+
+  console.log(dragon.toString());
+
+  root.add(new DoubleAttackModifier(dragon));
+  root.add(new IncreaseDefenseModifier(dragon));
+  root.handle();
+
+  console.log(dragon.toString());
+
+#+END_SRC
+
+#+RESULTS:
+: Dragon (1/1)
+: Doubling Dragon's attack
+: Increasing Dragon's defense
+: Dragon (2/2)
+: Doubling Dragon's attack
+: Doubling Dragon's attack
+: Dragon (8/2)
+: undefined
+
+*** Command
+It creates objects which encapsulate actions in objects.
+
+In object-oriented programming, the command pattern is a behavioral
+design pattern in which an object is used to encapsulate all
+information needed to perform an action or trigger an event at a later
+time. This information includes the method name, the object that owns
+the method and values for the method parameters.
+
+#+BEGIN_SRC js
+
+  class BankAccount {
+	constructor(balance = 0) {
+	  this.balance = balance;
+	}
+
+	deposit(amount) {
+	  this.balance += amount;
+	  console.log(`Deposited ${amount} - Total Balance ${this.balance}`);
+	}
+
+	withdraw(amount) {
+	  if (this.balance - amount >= BankAccount.overdraftLimit) {
+		this.balance -= amount;
+		console.log("Withdraw");
+	  }
+	}
+
+	toString() {
+	  return `Balance ${this.balance}`;  
+	}
+  }
+
+  BankAccount.overdraftLimit = -500;
+
+  // commands
+  let Action = Object.freeze({
+	deposit: 1,
+	withdraw: 2,
+  })
+
+  class BankAccountCommand {
+	constructor(account, action, amount) {
+	  this.account = account;
+	  this.action = action;
+	  this.amount = amount;
+	}
+
+	call() {
+	  switch (this.action) {
+		case Action.deposit:
+		  this.account.deposit(this.amount);
+		  break;
+		case Action.withdraw:
+		  this.account.withdraw(this.amount);
+		  break;
+	  }
+	}
+
+	undo() {
+	  switch (this.action) {
+		case Action.deposit:
+		  this.account.withdraw(this.amount);
+		  break;
+		case Action.withdraw:
+		  this.account.deposit(this.amount);
+		  break;
+	  }
+	}
+  }
+
+  // usage
+
+  let bankAccount = new BankAccount(100);
+  let cmd = new BankAccountCommand(bankAccount, Action.deposit, 50);
+
+  console.log(bankAccount.toString());
+  
+  cmd.call();
+  console.log(bankAccount.toString());
+
+  cmd.undo();
+  console.log(bankAccount.toString());
+
+
+#+END_SRC
+
+#+RESULTS:
+: Balance 100
+: Deposited 50 - Total Balance 150
+: Balance 150
+: Withdraw
+: Balance 100
+: undefined
+
+*** Iterator
+Iterator accesses the elements of an object without exposing its
+underlying representation.
+
+In object-oriented programming, the iterator pattern is a design
+pattern in which an iterator is used to traverse a container and
+access the container’s elements.
+
+We will be taking an example of an array in which we print the values
+of an array and then by using an iterator we print its value
+backwords.
+
+#+BEGIN_SRC js
+  class Stuff {
+	 constructor() {
+	   this.a = 100;
+	   this.b = 200;
+	 }
+
+	[Symbol.iterator](){
+	  let i = 0;
+	  let self = this;
+	  return {
+		next: function() {
+		  return {
+			done: i > 1,
+			value: self[i++ === 0 ? 'a' : 'b']
+		  };
+		}
+	  }
+	}
+
+	get backwards() {
+	  let i = 0;
+	  let self = this;
+	  return {
+		next: function() {
+		  return {
+		   done: i > 1,
+		   value: self[i++ === 0 ? 'b' : 'a']
+		  };
+		},
+	  // make iterator iterable
+	  [Symbol.iterator]: function () { return this; }
+	  }
+	}
+  }
+
+  // using it
+
+  let values = [100, 200, 300];
+
+  for (let i in values) {
+	console.log(`Element at pos ${i} is ${values[i]}`);
+  }
+
+  for (let v of values) {
+	console.log(`Values is ${v}`);
+  }
+
+  let stuff = new Stuff();
+
+  for (let item of stuff)
+	console.log(`${item}`);
+
+  for (let item of stuff.backwards)
+	console.log(`${item}`);
+
+
+#+END_SRC
+
+#+RESULTS:
+#+begin_example
+Element at pos 0 is 100
+Element at pos 1 is 200
+Element at pos 2 is 300
+Values is 100
+Values is 200
+Values is 300
+100
+200
+200
+100
+undefined
+#+end_example
+
+*** Mediator
+The mediator pattern adds a third-party object to control the
+interaction between two objects. It allows loose coupling between
+classes by being the only class that has detailed knowledge of their
+methods.
+
+The mediator pattern defines an object that encapsulates how a set of
+objects interact. This pattern is considered to be a behavioral
+pattern due to the way it can alter the program’s running behavior. In
+object-oriented programming, programs often consist of many classes.
+
+We will be using an example of a person using a chat room. Here, a
+chatroom acts as a mediator between two people communicating.
+
+#+BEGIN_SRC js
+  class Person {
+	constructor(name) {
+	  this.name = name;
+	  this.chatLog = [];
+	}
+
+	receive(sender, message) {
+	  let s = `${sender}: ${message}`;
+	  console.log(`[${this.name}'s chat session] ${s}`);
+	  this.chatLog.push(s);
+	}
+
+	say(message) {
+	  this.room.broadcast(this.name, message);
+	}
+
+	pm(who, message) {
+	  this.room.message(this.name, who, message);  
+	}
+  }
+
+  class ChatRoom {
+	constructor() {
+	  this.people = [];
+	}
+
+	broadcast(source, message) {
+	  for (let p of this.people)
+		if (p.name !== source) p.receive(source, message);
+	}
+
+	join(p) {
+	  let joinMsg = `{p.name} joins the chat`;
+	  this.broadcast("room", joinMsg);
+	  p.room = this;
+	  this.people.push(p);
+	}
+
+	message(source, destination, message) {
+	  for (let p of this.people)
+		if (p.name === destination) p.receive(source, message);
+	}
+  }
+
+  let room = new ChatRoom();
+
+  let Alice = new Person("Alice");
+  let Bob = new Person("Bob");
+
+  room.join(Alice);
+  room.join(Bob);
+  Bob.say("Hello!!!");
+
+  let doe = new Person("Doe");
+  room.join(doe);
+  doe.say("Hello everyone!");
+#+END_SRC
+
+#+RESULTS:
+: [Alice 's chat session]
+
+*** Memento
+Memento restores an object to its previous state.
+
+The memento pattern is a software design pattern that provides the
+ability to restore an object to its previous state. The memento
+pattern is implemented with three objects: the originator, a caretaker
+and a memento.
+
+We will be taking an example of a bank account in which we store our
+previous state and will have the functionality of undoing.
+
+#+BEGIN_SRC js
+
+  class Memento {
+	constructor(balance) {
+	  this.balance = balance;
+	}
+  }
+
+  class BankAccount {
+	constructor(balance = 0) {
+	  this.balance = balance;
+	}
+	deposit(amount) {
+	  this.balance += amount;
+	  return new Memento(this.balance);
+	}
+	restore(m) {
+	  this.balance = m.balance;
+	}
+	toString() {
+	  return `Balance: ${this.balance}`;
+	}
+  }
+
+  let bankAccount = new BankAccount(100);
+
+  console.log(bankAccount.toString());
+  let m1 = bankAccount.deposit(50);
+  console.log(bankAccount.toString());
+
+  bankAccount.restore(m1);
+  console.log(bankAccount.toString());
+
+#+END_SRC
+
+#+RESULTS:
+: Balance: 100
+: Balance: 150
+: Balance: 150
+: undefined
+
+*** Observer
+It allows a number of observer objects to see an event.
+
+The observer pattern is a software design pattern in which an object,
+named the subject, maintains a list of its dependents, called
+observers, and notifies them automatically of any state changes,
+usually by calling one of their methods.
+
+We will be taking an example of a person in which if a person falls
+ill, it will display a notification.
+
+#+BEGIN_SRC js
+
+  class Event {
+	constructor() {
+	  this.handlers = new Map();
+	  this.count = 0;
+	}
+
+	subscribe(handler) {
+	  this.handlers.set(++this.count, handler);
+	  return this.count;
+	}
+
+	unsubscribe(idx) {
+	  this.handlers.delete(idx);
+	}
+
+	fire(sender, args) {
+	  this.handlers.forEach((v, k) => v(sender, args));
+	}
+  }
+
+  class FallsIllArgs {
+	constructor(address) {
+	  this.address = address;
+	}
+  }
+
+  class Person {
+	constructor(address) {
+	  this.address = address;
+	  this.fallsIll = new Event();
+	}
+
+	catchCold() {
+	  this.fallsIll.fire(this, new FallsIllArgs(this.address));
+	}
+  }
+
+  // how to use it
+
+  let person = new Person("ABC road");
+
+  let sub = person.fallsIll.subscribe((s, a) => {
+	console.log(`A doctor has been called to ${a.address}`);
+  });
+
+  person.catchCold();
+  person.catchCold();
+  
+  person.fallsIll.unsubscribe(sub);
+  person.catchCold();
+
+
+#+END_SRC
+
+#+RESULTS:
+: A doctor has been called to ABC road
+: A doctor has been called to ABC road
+: undefined
+
+*** Visitor
+It adds operations to objects without having to modify them.
+
+The visitor design pattern is a way of separating an algorithm from an
+object structure on which it operates. A practical result of this
+separation is the ability to add new operations to existing object
+structures without modifying the structures.
+
+We will be taking an example of NumberExpression in which it gives us
+the result of the given expression.
+
+#+BEGIN_SRC js
+
+  class NumberExpression {
+	constructor(value) {
+	  this.value = value;  
+	}
+	print(buffer) {
+	  buffer.push(this.value.toString());
+	}
+  }
+
+  class AdditionExpression {
+	constructor(left, right) {
+	  this.left = left;
+	  this.right = right;
+	}
+	print(buffer) {
+	  buffer.push('(');
+	  this.left.print(buffer);
+	  buffer.push('+');
+	  this.right.print(buffer);
+	  buffer.push(')');
+	}
+  }
+
+  // That's how we will use this,
+  // given expression => 5 + (1+9)
+
+  let e = new AdditionExpression(
+	new NumberExpression(5),
+	new AdditionExpression(
+	  new NumberExpression(1),
+	  new NumberExpression(9)
+	)
+  );
+
+  let buffer = [];
+  e.print(buffer);
+  console.log(JSON.stringify(buffer.join('')));
+
+#+END_SRC
+
+#+RESULTS:
+: (5+(1+9))
+
+*** Strategy
+It allows one of the algorithms to be selected in certain situations.
+
+The strategy pattern is a behavioral software design pattern that
+enables selecting an algorithm at runtime. Instead of implementing a
+single algorithm directly, code receives run-time instructions as to
+which in a family of algorithms to use.
+
+We will take an example in which we have a text processor that will
+display data based on strategy(HTML or Markdown).
+
+#+BEGIN_SRC js
+
+  let OutputFormat = Object.freeze({
+	markdown: 0,
+	html: 1,
+  });
+
+  class ListStrategy {
+	start(buffer) {}
+	end(buffer) {}
+	addListem(buffer, item) {}
+  }
+
+  class MarkdownListStrategy extends ListStrategy {
+	addListItem(buffer, item) {
+	  buffer.push(` * ${item}`);
+	}
+  }
+
+  class HtmlListStrategy extends ListStrategy {
+	start(buffer) {
+	  buffer.push("<ul>");
+	}
+	end(buffer) {
+	  buffer.push("</ul>");
+	}
+	addListItem(buffer, item) {
+	  buffer.push(`  <li>${item}</li>`);  
+	}
+  }
+
+  class TextProcessor {
+	constructor(outputFormat) {
+	  this.buffer = [];
+	  this.setOutputFormat(outputFormat);  
+	}
+	setOutputFormat(format) {
+	  switch (format) {
+		case OutputFormat.markdown:
+		  this.listStrategy = new MarkdownListStrategy();
+		  break;
+		case OutputFormat.html:
+		  this.listStrategy = new HtmlListStrategy();
+		  break;
+	  }
+	}
+	appendList(items) {
+	  this.listStrategy.start(this.buffer);
+	  for (let item of items) {
+		this.listStrategy.addListItem(this.buffer, item);
+	  }
+	  this.listStrategy.end(this.buffer);
+	}
+	clear() {
+	  this.buffer = [];
+	}
+	toString() {
+	  return this.buffer.join("\n");
+	}
+  }
+
+  let tp = new TextProcessor();
+
+  tp.setOutputFormat(OutputFormat.markdown);
+  tp.appendList(["one", "two", "three"]);
+  console.log(tp.toString());
+
+  tp.clear();
+  tp.setOutputFormat(OutputFormat.html);
+  tp.appendList(["one", "two", "three"]);
+  console.log(tp.toString());
+
+
+#+END_SRC
+
+#+RESULTS:
+:  * one
+:  * two
+:  * three
+: <ul>
+:   <li>one</li>
+:   <li>two</li>
+:   <li>three</li>
+: </ul>
+: undefined
+
+*** State
+It alters the behavior of an object when its internal state changes.
+
+The state pattern is a behavioral software design pattern that allows
+an object to alter its behavior when its internal state changes. This
+pattern is close to the concept of finite-state machines.
+
+We will be taking an example of a light switch in which if we turn on
+or off the switch, its state changes.
+
+
+#+BEGIN_SRC js
+
+  class State {
+	constructor() {
+	  if (this.constructor === State) throw new Error("abstract!");
+	}
+
+	on(sw) {
+	  console.log("Light is already on.");
+	}
+
+	off(sw) {
+	  console.log("Light is already off.");
+	}	
+  }
+  
+  class OnState extends State {
+	constructor() {
+	  super();
+	  console.log("Light turned on.");
+	}
+	off(sw) {
+	  console.log("Turning light of...");
+	  sw.state = new OffState();
+	}
+  }
+
+  class OffState extends State {
+	constructor() {
+	  super();
+	  console.log("Light turned off.");
+	}
+	off(sw) {
+	  console.log("Turning light on...");
+	  sw.state = new OnState();
+	}
+  }
+
+  class Switch {
+	constructor() {
+	  this.state = new OffState();  
+	}
+
+	on() {
+	  this.state.on(this);
+	}
+
+	off() {
+	  this.state.off(this);
+	}
+  }
+
+
+  let mySwitch = new Switch();
+  mySwitch.on();
+  mySwitch.off();
+
+
+
+#+END_SRC
+
+#+RESULTS:
+: Light turned off.
+: Light is already on.
+: Turning light on...
+: Light turned on.
+: undefined
+
+
+*** Template
+It defines the skeleton of an algorithm as an abstract class, that how
+should it be performed.
+
+Template Method is a method in a superclass, usually an abstract
+superclass, and defines the skeleton of an operation in terms of a
+number of high-level steps.
+
+We will be taking an example of a chess game,
+
+#+BEGIN_SRC js
+
+  class Game {
+	constructor(numberOfPlayers) {
+	  this.numberOfPlayers = numberOfPlayers;
+	  this.currentPlayer = 0;
+	}
+
+	run() {
+	  this.start();
+	  while (!this.haveWinner) {
+		this.takeTurn();
+	  }
+	  console.log(`Player ${this.winningPlayer} wins.`);
+	}
+
+	start() {}
+
+	get haveWinner() {}
+
+	takeTurn() {}
+
+	get winningPlayer() {}
+  }
+
+  class Chess extends Game {
+	constructor() {
+	  super(2);
+	  this.maxTurns = 10;
+	  this.turn = 1;
+	}
+
+	start() {
+	  console.log(`Starting a game of chess with ${this.numberOfPlayers} players.`);  
+	}
+
+	get haveWinner() {
+	  return this.turn === this.maxTurns;
+	}
+
+	takeTurn() {
+	  console.log(`Turn ${this.turn++} taken by player ${this.currentPlayer}.`);
+
+	  this.currentPlayer = (this.currentPlayer + 1) % this.numberOfPlayers;
+	}
+
+	get winningPlayer() {
+	  return this.currentPlayer;
+	}
+
+  }
+
+let chess = new Chess();
+chess.run();
+
+#+END_SRC
+
+#+RESULTS:
+#+begin_example
+Starting a game of chess with 2 players.
+Turn 1 taken by player 0.
+Turn 2 taken by player 1.
+Turn 3 taken by player 0.
+Turn 4 taken by player 1.
+Turn 5 taken by player 0.
+Turn 6 taken by player 1.
+Turn 7 taken by player 0.
+Turn 8 taken by player 1.
+Turn 9 taken by player 0.
+Player 1 wins.
+undefined
+#+end_example
+
+
 * Await inside loops
 What will be the output of this snippet?
 
@@ -149,9 +1589,6 @@ It could be also written in this fashion:
 : 🚀 each 2
 : 🚀 each 3
 : 🚀 End
-
-
-
 
 * What is: Functional Programming [TODO]
 ** Source
